plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.78'
    id 'io.freefair.lombok' version '8.7.1'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id


base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    flatDir {
        dir("libs")
    }
    mavenLocal()
    mavenCentral()
    maven {
        name = "Modrinth Maven"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
    maven {
        name = "CurseForge Maven"
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Curios"
        url = "https://maven.theillusivec4.top/"
    }
    maven { // Registrate
        url "https://maven.gegy.dev/releases"
    }
    maven {// Ldlib
        name "firstdarkdev"
        url "https://maven.firstdarkdev.xyz/snapshots"
    }
    maven {
        // location of the maven that hosts JEI files since January 2023, botania
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" }
    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven {
        // kubejs
        url "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroup("software.bernie.geckolib")
        }
    }

    maven {
        // emi
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }

    maven {
        url 'https://jitpack.io'
        content {
            includeGroup "com.github.rtyley"
        }
    }
    maven { url "https://maven.shedaniel.me/" }
    maven { url "https://maven.minecraftforge.net/" }
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")

    api("com.tterrag.registrate:Registrate:MC1.21.1-1.4.8")
    jarJar("com.tterrag.registrate:Registrate:MC1.21.1-1.4.8")

    compileOnly("org.appliedenergistics:guideme:21.1.1:api")
    runtimeOnly("org.appliedenergistics:guideme:21.1.1")

    implementation("org.appliedenergistics:appliedenergistics2:19.2.17")

    // Optional integration target. 4.11.0 is the verified 1.21.1 build (AE2 >= 19.2.15).
    compileOnly("curse.maven:mega-cells-622112:7952621") { transitive = false }
    runtimeOnly("curse.maven:mega-cells-622112:7952621") { transitive = false }

    implementation("curse.maven:omni-cells-1359517:8050965")

    implementation("curse.maven:ae2-lightning-tech-1527395:8422767") { transitive = false }
    runtimeOnly("top.theillusivec4.curios:curios-neoforge:9.5.1+1.21.1")

    implementation("com.lowdragmc.ldlib2:ldlib2-neoforge-${minecraft_version}:${ldlib2_version}:all") { transitive = false }
    compileOnly("org.appliedenergistics.yoga:yoga:${yoga_version}")
    compileOnly("dev.vfyjxf:taffy:${taffy_version}")

    implementation("curse.maven:mekanism-268560:7132168")
    implementation("curse.maven:applied-mekanistics-574300:7096962")

    implementation("curse.maven:glodium-957920:5821676")
    implementation("curse.maven:ex-pattern-provider-892005:7478960")
    implementation("curse.maven:applied-flux-965012:8204513")

    implementation("curse.maven:advancedae-1084104:7374386")

    implementation("curse.maven:jade-324717:7428884")

    // implementation("vazkii.botania:botania-neoforge-1.21.1:454-SNAPSHOT")
    // implementation("curse.maven:applied-botanics-addon-610632:7234122")
    // implementation(name: "appbot-1.6.0")

    implementation("com.hollingsworth.ars_nouveau:ars_nouveau-1.21.1:5.9.4.1182")
    implementation("curse.maven:ars-energistique-905641:6203425")

    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
    runtimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")
    compileOnly("dev.emi:emi-neoforge:${emi_version}")

    implementation("software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}")

    api("dev.latvian.mods:kubejs-neoforge:$kubejs_version")
    interfaceInjectionData("dev.latvian.mods:kubejs-neoforge:$kubejs_version")
}

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        aeGuide {
            client()

            systemProperty 'guideme.ae2.guide.sources', file('guidebook').absolutePath
            systemProperty 'guideme.ae2.guide.sourcesNamespace', 'neoecoae'
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            jvmArgument '-XX:+IgnoreUnrecognizedVMOptions'
            jvmArgument '-XX:+AllowEnhancedClassRedefinition'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.java {
    exclude 'cn/dancingsnow/neoecoae/integration/appbot/**'
}

sourceSets.main.resources {
    srcDirs 'src/generated/resources', 'src/guidebook/resources'
}

sourceSets.test {
    compileClasspath += sourceSets.main.compileClasspath
    runtimeClasspath += sourceSets.main.runtimeClasspath
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata

neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
}

tasks.register('copyGuidebook', Copy) {
    group = 'build'

    from 'guidebook/'
    into 'src/guidebook/resources/assets/neoecoae/ae2guide'
}

tasks.named('processResources') {
    dependsOn tasks.named('copyGuidebook')
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

tasks.register('sourcesJar', Jar) {
    dependsOn delombok
    from delombok.outputs.files
    archiveClassifier = "sources"
}

artifacts {
    archives sourcesJar
}


lombok {
    version = "1.18.34"
}
